Update README and basic benchmark notebook.